--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "framer-motion": "^11.9.0",
     "next": "14.2.13",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-zorm": "^0.9.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "^20",
