--- a/package.json
+++ b/package.json
@@ -13,11 +13,12 @@
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
+    "@hookform/resolvers": "^3.9.0",
     "framer-motion": "^11.9.0",
     "next": "14.2.13",
     "react": "^18",
     "react-dom": "^18",
-    "react-zorm": "^0.9.0",
+    "react-hook-form": "^7.53.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
