--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@emotion/styled": "^11.13.0",
     "@hookform/resolvers": "^3.9.0",
     "framer-motion": "^11.9.0",
+    "http-status-codes": "^2.3.0",
     "next": "14.2.13",
     "react": "^18",
     "react-dom": "^18",
