--- a/package.json
+++ b/package.json
@@ -20,9 +20,9 @@
     "@hookform/resolvers": "^3.9.0",
     "framer-motion": "^11.9.0",
     "http-status-codes": "^2.3.0",
-    "next": "14.2.13",
-    "react": "^18",
-    "react-dom": "^18",
+    "next": "^15.0.0-rc.1",
+    "react": "^19.0.0-rc-77b637d6-20241016",
+    "react-dom": "^19.0.0-rc-77b637d6-20241016",
     "react-hook-form": "^7.53.0",
     "sst": "3.1.73",
     "zod": "^3.23.8"
