--- a/package.json
+++ b/package.json
@@ -21,9 +21,9 @@
     "@hookform/resolvers": "^3.9.0",
     "framer-motion": "^11.9.0",
     "http-status-codes": "^2.3.0",
-    "next": "^15.0.0-rc.1",
-    "react": "^19.0.0-rc-b8ae38f8-20241018",
-    "react-dom": "^19.0.0-rc-b8ae38f8-20241018",
+    "next": "^15.0.1",
+    "react": "^19.0.0-rc-1631855f-20241023",
+    "react-dom": "^19.0.0-rc-1631855f-20241023",
     "react-hook-form": "^7.53.0",
     "sst": "3.1.73",
     "zod": "^3.23.8"
@@ -33,7 +33,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
-    "eslint-config-next": "14.2.13",
+    "eslint-config-next": "^15.0.0-rc.1",
     "postcss": "^8",
     "typescript": "^5"
   }
